--- a/HumanKit.framework/viewerFrame.html
+++ b/HumanKit.framework/viewerFrame.html
@@ -28,27 +28,57 @@
 <script>
     var human = new HumanAPI("embeddedHuman");
 
+    human.on( 'labels.created', function(labelData) {
+        window.webkit.messageHandlers.messageHandler.postMessage("labels.created event: " + JSON.stringify(labelData));
+    });
+
+human.on( 'labels.destroyed', function(labelData) {
+    window.webkit.messageHandlers.messageHandler.postMessage("labels.destroyed event: " + JSON.stringify(labelData));
+});
+
+
+human.on( 'labels.chapterInfo', function(labelData) {
+    window.webkit.messageHandlers.messageHandler.postMessage("labels.chapterInfo event: " + JSON.stringify(labelData));
+});
+
+human.on('labels.moved', function(annoPosition) {
+    window.webkit.messageHandlers.messageHandler.postMessage("labels.moved event:" + JSON.stringify(annoPosition));
+});
+
+human.on('labels.entered', function(annoPosition) {
+    window.webkit.messageHandlers.messageHandler.postMessage("labels.entered event: " + JSON.stringify(annoPosition));
+});
+
+human.on('labels.left', function(annoPosition) {
+    window.webkit.messageHandlers.messageHandler.postMessage("labels.left event: " + JSON.stringify(annoPosition));
+});
+
+human.on('labels.picked', function(annoPosition) {
+    window.webkit.messageHandlers.messageHandler.postMessage("labels.picked event: " + JSON.stringify(annoPosition));
+});
+
+
     // send a chapter transition message
     human.on( 'timeline.chapterTransition', function(chapterData) {
+        window.webkit.messageHandlers.messageHandler.postMessage("&&&&&&&&&&&& got chapter transition");
         window.webkit.messageHandlers.chapterHandler.postMessage(chapterData);
     });
 
     // camera updated callback
     human.on( 'camera.updated', function(cameraData) {
+        window.webkit.messageHandlers.messageHandler.postMessage('camera ' + JSON.stringify(cameraData));
         window.webkit.messageHandlers.cameraUpdateHandler.postMessage(cameraData);
     });
 
     var progressDone = false;
 
     human.on('human.progress',function(data) {
-        window.webkit.messageHandlers.messageHandler.postMessage("human.progress " + JSON.stringify(data));
+        window.webkit.messageHandlers.messageHandler.postMessage("**** human.progress " + JSON.stringify(data));
         if (data.progress === 100) {
             if (progressDone === false) {
                 window.webkit.messageHandlers.assetsHandler.postMessage("loaded");
             }
             progressDone = true;
-        } else {
-            progressDone = false;
         }
     });
 
@@ -71,6 +101,7 @@
     human.on( 'scene.objectsSelected' , function(objects) {
         window.webkit.messageHandlers.messageHandler.postMessage(JSON.stringify(objects));
         window.webkit.messageHandlers.selectHandler.postMessage(objects);
+        lastPick = '';
     });
 
     // send an animation update message
@@ -83,8 +114,14 @@
         window.webkit.messageHandlers.timelineHandler.postMessage('done');
     });
 
+    var lastPick = '';
+
     human.on( 'scene.picked' , function (event) {
-        window.webkit.messageHandlers.pickHandler.postMessage(event);
+        if (event.position !== undefined && event.objectId !== lastPick) {
+            lastPick = event.objectId;
+            window.webkit.messageHandlers.messageHandler.postMessage('scene.picked ' + JSON.stringify(event));
+            window.webkit.messageHandlers.pickHandler.postMessage(event);
+        }
     });
 
     human.on( 'annotations.created' , function (anno) {
@@ -92,23 +129,34 @@
     });
 
     human.on( 'annotations.shown' , function () {
+        window.webkit.messageHandlers.messageHandler.postMessage("**** GOT ANNOS SHOWN");
         window.webkit.messageHandlers.annotationsShownHandler.postMessage(true);
     });
+
+human.on( 'labels.enabled' , function () {
+    window.webkit.messageHandlers.messageHandler.postMessage("**** GOT labels shown all ");
+});
+
+human.on( 'labels.disabled' , function () {
+    window.webkit.messageHandlers.messageHandler.postMessage("**** GOT labels hidden all ");
+});
 
     human.on('annotations.destroyed', function (event) {
         window.webkit.messageHandlers.annoDestroyHandler.postMessage(event);
     });
 
     human.on('annotations.hidden', function () {
+        window.webkit.messageHandlers.messageHandler.postMessage("**** GOT ANNOS HIDDEN");
         window.webkit.messageHandlers.annotationsShownHandler.postMessage(false);
     });
 
     human.on('hotspots.positionUpdated', function(annoPosition) {
-        window.webkit.messageHandlers.messageHandler.postMessage("hotspots.positionUpdated " + JSON.stringify(annoPosition));
+//        window.webkit.messageHandlers.messageHandler.postMessage("hotspots.positionUpdated " + JSON.stringify(annoPosition));
         window.webkit.messageHandlers.annotationsMovedHandler.postMessage(annoPosition);
     });
 
     human.on( 'human.ready' , function () {
+        progressDone = false;
         window.webkit.messageHandlers.messageHandler.postMessage("GH: human.ready");
         human.send('scene.metadata', function(metadata) {
             window.webkit.messageHandlers.sceneMetaHandler.postMessage(metadata);
