--- a/HumanKit.framework/sdk/index.html
+++ b/HumanKit.framework/sdk/index.html
@@ -1,27 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Human Anatomy and Disease in Interactive 3D | BioDigital Human Platform</title>
-  <base href="/sdk/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Human Anatomy and Disease in Interactive 3D | BioDigital Human Platform</title>
+    <base href="/sdk/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta content="The BioDigital Human is a virtual 3D body that visualizes human anatomy, disease and treatments in an interactive 3D web platform" name="description">
-  <meta content="human anatomy, 3d body, 3d anatomy, 3d human, virtual body, anatomy education, anatomy education, human visualization, 3D body map, human body API, online anatomy, BioDigital, BioDigital Human, body platform" name="keywords">
-  <meta content="BioDigital 2020" name="copyright">
-  <meta content="BioDigital" name="author">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta
+      content="The BioDigital Human is a virtual 3D body that visualizes human anatomy, disease and treatments in an interactive 3D web platform"
+      name="description" />
+    <meta
+      content="human anatomy, 3d body, 3d anatomy, 3d human, virtual body, anatomy education, anatomy education, human visualization, 3D body map, human body API, online anatomy, BioDigital, BioDigital Human, body platform"
+      name="keywords" />
+    <meta content="BioDigital 2020" name="copyright" />
+    <meta content="BioDigital" name="author" />
 
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-  <!-- Declare fixed document referrer: prevent reset via history navigation (IE11 fix) -->
-  <script>
-    window.BD_DOCUMENT_REFERRER = document.referrer;
-  </script>
-<link rel="stylesheet" href="styles.css"></head>
-<body>
-  <app-root></app-root>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js"></script>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="scripts.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+    <!-- Declare fixed document referrer: prevent reset via history navigation (IE11 fix) -->
+    <script>
+      window.BD_DOCUMENT_REFERRER = document.referrer;
+    </script>
+  <link rel="stylesheet" href="styles.css"></head>
+  <body>
+    <app-root></app-root>
+  <script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="scripts.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
